fea(openapi): [CHK-4168] remove response bodies
