# api-spec/v1/openapi.yaml
@@ -141,10 +141,6 @@ paths:
       responses:
         '202':
           description: TransactionRefundRequested message successfully queued to event-dispatcher
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/DispatcherRefundRequestResponse'
         '400':
           description: Formally invalid input
           content:
@@ -153,6 +149,12 @@ paths:
                 $ref: '#/components/schemas/ProblemJson'
         '404':
           description: Transaction not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemJson'
+        '422':
+          description: Transaction not in a refundable state
           content:
             application/json:
               schema:
@@ -192,10 +194,6 @@ paths:
       responses:
         '202':
           description: TransactionRefundRequested message successfully queued to event-dispatcher
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/DispatcherRefundRequestResponse'
         '400':
           description: Formally invalid input
           content:
@@ -204,6 +202,12 @@ paths:
                 $ref: '#/components/schemas/ProblemJson'
         '404':
           description: Transaction not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemJson'
+        '422':
+          description: Transaction not in a refundable state
           content:
             application/json:
               schema:
@@ -243,10 +247,6 @@ paths:
       responses:
         '202':
           description: TransactionUserReceipt message successfully queued to event-dispatcher
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/EmailResendResponse'
         '400':
           description: Invalid transaction ID format
           content:
@@ -279,22 +279,6 @@ components:
           type: string
           description: The id of the refunded operation, if any
           default: 0
-    DispatcherRefundRequestResponse:
-      type: object
-      properties:
-        transactionId:
-          type: string
-          description: The transaction ID
-      required:
-        - transactionId
-    EmailResendResponse:
-      type: object
-      properties:
-        transactionId:
-          type: string
-          description: The transaction ID
-      required:
-        - transactionId
     ProblemJson:
       type: object
       properties:
